--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-docker-compose": "^1.1.3",
+    "gulp-imagemin": "^5.0.3",
     "gulp-livereload": "^4.0.1",
+    "gulp-minify": "^3.1.0",
     "gulp-open": "^3.0.1",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
